# earendil

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml
app/: main.py
data/: etoro_instrument_ids.json
docs/: continuous-deployment.md  etoro-market-data-probes.md  market-context-entry-routing.md  market-data-v2.md  multi-timeframe-market-structure.md  pr4a-analysis-readiness.md  pr4b-mtf-lineage-observability.md  pr5a-deharden-probabilistic-signals.md  pr5b-context-mtf-eu-strategy.md  pr5c-fixed-profile-tp-aware-calibration.md  pr5d-decision-decontamination.md  runtime-startup-regression.md
earendil.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: apply_cleanup_pr1.py  apply_pr5d_patch.py  deploy_release.sh  run_etoro_market_data_probe.py  run_market_data_probe.sh  show_logs.sh  start_earendil.bat  start_goblin.bat  start_goblin.sh  stop_earendil.bat
tests/: test_breakout_strategy.py  test_cached_broker.py  test_candidate_economics_estimator.py  test_candidate_economics_risk_manager_consistency.py  test_candidate_flow_import.py  test_candidate_flow_selection.py  test_candidate_ranking.py  test_candidate_selector.py  test_candle_builder.py  test_etoro_account_equity.py  test_etoro_client.py  test_etoro_market_data_mapper.py  test_etoro_market_rates_batch.py  test_etoro_order_payload_builder.py  test_instrument_configs.py  test_instrument_registry.py  test_intraday_trend_strategy.py  test_main_market_data_manifest.py  test_main_resilience.py  test_main_startup_settings.py  (+16 more)
(+355 files in other folders)
